# cam-bpw-sim

./: .flake8  .gitignore  CHANGELOG.rst  LICENSE  README.rst  pyproject.toml  requirements.txt
cam_bpw_sim/: __init__.py  __main__.py  _baseline.py  _camval.py  _feat.py  _preproc.py  _sigutils.py  _stats.py  app.py  cam.py  cli.py  meas.py  signal.py  utils.py  val.py
cam_bpw_sim/meas_nb/: meas_vs_cam.ipynb  meas_vs_cam_fcr_waveform_summary.ipynb
cam_bpw_sim/sensors/: __init__.py  optoforce.py
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/_static/css/: custom.css
docs/source/parts/: .gitignore  api.rst  cams.rst  getting-started.rst  high-level-api.rst  measurement.rst  validation.rst
notebooks/: custom_cam_profile.ipynb  meas_setup_params_visualization.ipynb
tests/: test_signal.py  test_val.py
tests/sensors/: optoforce.csv  test_optoforce.py
